Code Implemet Done For Version One
